update logo to resize for mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id="tooltip" style="display: none; z-index: 9999; background-color: #fff; padding: 10px; border: 1px solid #ccc; font-size:1em;"></div>
   <div id="infoPanel">
     <div id="infoPanel-header">
-      <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:75px;"/>
+      <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:75px; max-width: -webkit-fill-available;"/>
     </div>
     <div id="treeImages">
       <div id="treeCarousel" class="carousel slide" data-ride="carousel">
