add nominate a tree button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <div id="infoPanel">
     <div id="infoPanel-header">
       <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:75px; max-width: -webkit-fill-available;"/>
+      <button id="nominateBtn" onclick="activateNominating()">Nominate a Tree</button>
     </div>
     <div id="treeImages">
       <div id="treeCarousel" class="carousel slide" data-ride="carousel">
