--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div id="infoPanel-content">
       <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
-      <p>Click on a Tree for more information or click on the nominate button and select a location on the map to add a tree to the register</p>
+      <p>Click on a tree for more information or click on the nominate button and select a location on the map to add a tree to the register.</p>
     </div>
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
