--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 <body>
   <!-- Add your site or application content here -->
+  <div id="loading-screen"></div>
   <div id="map"></div>
   <div id="tooltip" style="display: none; z-index: 9999; background-color: #fff; padding: 10px; border: 1px solid #ccc; font-size:1em;"></div>
   <div id="infoPanel">
@@ -39,7 +40,7 @@
       <button id="nominateBtn" onclick="activateNominating()">Nominate a Tree</button>
     </div>
     <div id="treeImages">
-      <div id="treeCarousel" class="carousel slide" data-ride="carousel">
+      <div id="treeCarousel" class="carousel slide" data-bs-ride="false" data-bs-touch="true">
         <!-- Indicators -->
         <div class="carousel-indicators"></div>
 
@@ -56,7 +57,6 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <!-- <img id="treeImage" />-->
     </div>
     <div id="infoPanel-content">
       <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
