dropdown changes and scroll infopanel

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             Options
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
-            <li><a class="dropdown-item" onclick="disableNominating()">Disable Nominating</a></li>
+            <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
+            <!-- <li><a class="dropdown-item" onclick="disableNominating()">Disable Nominating</a></li> -->
           </ul>
         </div>
         <!-- <button id="nominateBtn" onclick="activateNominating()">Nominate a Tree</button> -->
