--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
-            <!-- <li><a class="dropdown-item" onclick="disableNominating()">Disable Nominating</a></li> -->
+            <li><a class="dropdown-item" onclick="">Leaderboard</a></li>
+            <li><a class="dropdown-item" onclick="">Credits</a></li>
           </ul>
         </div>
         <!-- <button id="nominateBtn" onclick="activateNominating()">Nominate a Tree</button> -->
