--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Alberta Tree Register Map</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1" maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1" maximum-scale=1, user-scalable=0">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -36,11 +36,11 @@
   <div id="map-container">
     <div id="map"></div>
     <div id="infoPanel">
-      <div id="infoPanel-header" class="row mb-3 text-center">
-        <div class="col-8">
-          <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:70px; max-width: -webkit-fill-available;" />
+      <div id="infoPanel-header">
+        <div>
+          <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:60px; max-width: -webkit-fill-available;" />
         </div>
-        <div class="btn-group col-4">
+        <div class="btn-group" style="margin-left: 25px;">
           <button id="optionsBtn" class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Options
           </button>
