--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div>
           <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:60px; max-width: -webkit-fill-available;" />
         </div>
-        <div class="btn-group" style="margin-left: 25px;">
+        <div class="btn-group">
           <button id="optionsBtn" class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Options
           </button>
