--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div id="map-container">
     <div id="map"></div>
     <div id="infoPanel">
-      <div id="infoPanel-header">
+      <div id="infoPanel-header" class="text-center">
         <div>
           <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:60px; max-width: -webkit-fill-available;" />
         </div>
