--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
   <div id="map-container">
     <div id="map"></div>
     <div id="infoPanel">
-      <div id="infoPanel-header" class="text-center">
-        <div>
-          <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:60px; max-width: -webkit-fill-available;" />
+      <div id="infoPanel-header" class="row justify-content-left">
+        <div class="col-8">
+          <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:60px;" />
         </div>
-        <div class="btn-group">
+        <div class="btn-group col-4">
           <button id="optionsBtn" class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Options
           </button>
