element sizing fixes and refactoring

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Alberta Tree Register Map</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1" maximum-scale=1, user-scalable=0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -36,11 +36,11 @@
   <div id="map-container">
     <div id="map"></div>
     <div id="infoPanel">
-      <div id="infoPanel-header" class="row justify-content-left">
-        <div class="col-8">
+      <div id="infoPanel-header" class="row w-100">
+        <div class="col-8 d-flex justify-content-center">
           <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:60px;" />
         </div>
-        <div class="btn-group col-4">
+        <div class="btn-group col-4 d-flex justify-content-center align-items-center">
           <button id="optionsBtn" class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Options
           </button>
