--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="infoPanel">
       <div id="infoPanel-header" class="row w-100">
         <div class="col-8 d-flex justify-content-center">
-          <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:60px;" />
+          <img src="img/Alberta-Tree-Registry-PNG-long.png" style="margin: auto; max-height:60px; max-width:100%;" />
         </div>
         <div class="btn-group col-4 d-flex justify-content-center align-items-center">
           <button id="optionsBtn" class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,7 +47,6 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
             <li><a class="dropdown-item disabled" onclick="">Leaderboard</a></li>
-            <li><a class="dropdown-item disabled" onclick="">Credits</a></li>
           </ul>
         </div>
         <!-- <button id="nominateBtn" onclick="activateNominating()">Nominate a Tree</button> -->
