--- a/index.html
+++ b/index.html
@@ -75,7 +75,14 @@
       </div>
       <div id="infoPanel-content">
         <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
-        <p>Click on a tree for more information or click on the nominate button and select a location on the map to add a tree to the register.</p>
+        <p>Click on a tree for more information or use the options button to nominate a tree or view our leaderboard (still under development).</p>
+        <div id="credits">
+          <p style="text-align: center;"><strong>Credits</strong></p>
+          <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
+          <p>Mapping Engine provided by <a href="https://openlayers.org" target="_blank">OpenLayers</a></p>
+          <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a>
+            from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></p>
+        </div>
       </div>
     </div>
   </div>
