add basic leaderboard, fix map center point

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
-            <li><a class="dropdown-item disabled" onclick="">Leaderboard</a></li>
+            <li><a class="dropdown-item" onclick="buildLeaderboard()">Leaderboard</a></li>
           </ul>
         </div>
       </div>
@@ -78,6 +78,7 @@
         </div>
       </div>
     </div>
+
   </div>
   <div id="tooltip" style="display: none; z-index: 9999; background-color: #fff; padding: 10px; border: 1px solid #ccc; font-size:1em;"></div>
 
