leaderboard tree select changes

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
             <li><a class="dropdown-item" onclick="buildLeaderboard()">Leaderboard</a></li>
+            <li><a class="dropdown-item disabled">Photo Gallery</a></li>
           </ul>
         </div>
       </div>
