--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
       </div>
       <div id="infoPanel-content">
         <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
-        <p>Click on a tree for more information or use the options button to nominate a tree or view our leaderboard (still under development).</p>
+        <p>Click on a tree for more information or use the options menu to:</p>
+        <p>1) Nominate a tree by selecting a location on the map.</p>
+        <p>2) View the leaderboard. Click on a tree to navigate to its location.</p>
+        <p>3) View the Photo Gallery (disabled while under development).</p>
         <div id="credits">
           <p style="text-align: center;"><strong>Credits</strong></p>
           <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
