fix reset button and update mobile map view defaults

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Options
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a id="nominateBtn" class="dropdown-item" onclick="resetMapPosition()">Reset Map</a></li>
+            <li><a class="dropdown-item" onclick="resetMapPosition()">Reset Map</a></li>
             <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
             <li><a class="dropdown-item" onclick="buildLeaderboard()">Leaderboard</a></li>
             <li><a class="dropdown-item disabled">Photo Gallery</a></li>
