--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
       <div id="infoPanel-content">
         <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
         <p>Click on a tree for more information or use the options menu to:</p>
-        <p>1) Nominate a tree by selecting a location on the map.</p>
-        <p>2) View the leaderboard. Click on a tree to navigate to its location.</p>
-        <p>3) View the Photo Gallery (disabled while under development).</p>
+        <p>1) Reset the map to its default position.</p>
+        <p>2) Nominate a tree by selecting a location on the map.</p>
+        <p>3) View the leaderboard. Click on a tree to navigate to its location.</p>
+        <p>4) View the Photo Gallery (disabled while under development).</p>
         <div id="credits">
           <p style="text-align: center;"><strong>Credits</strong></p>
           <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
