--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item" onclick="resetMapPosition()">Reset Map</a></li>
             <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
-            <li><a class="dropdown-item" onclick="buildLeaderboard()">Leaderboard</a></li>
-            <li><a class="dropdown-item disabled">Photo Gallery</a></li>
+            <li><a class="dropdown-item" onclick="buildTopTrees()">Top Trees</a></li>
+            <li><a class="dropdown-item" onclick="buildPhotoGallery()">Photo Gallery</a></li>
           </ul>
         </div>
       </div>
@@ -70,11 +70,11 @@
       </div>
       <div id="infoPanel-content">
         <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
-        <p>Click on a tree for more information or use the options menu to:</p>
+        <p id="basicTutorial">Click on a tree for more information or use the options menu to:</p>
         <p>1) Reset the map to its default position.</p>
         <p>2) Nominate a tree by selecting a location on the map.</p>
-        <p>3) View the leaderboard. Click on a tree to navigate to its location.</p>
-        <p>4) View the Photo Gallery (disabled while under development).</p>
+        <p>3) View a list of the top trees. Click on a tree to navigate to its location.</p>
+        <p>4) View the photo gallery.</p>
         <div id="credits">
           <p style="text-align: center;"><strong>Credits</strong></p>
           <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
