--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p>1) Reset the map to its default position.</p>
         <p>2) Nominate a tree by selecting a location on the map.</p>
         <p>3) View a list of the top trees. Click on a tree to navigate to its location.</p>
-        <p>4) View the photo gallery.</p>
+        <p>4) View the photo gallery. Click on an image to view it in fullscreen. Click on its name to see more information.</p>
         <div id="credits">
           <p style="text-align: center;"><strong>Credits</strong></p>
           <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
