add species descriptions

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       </div>
       <div id="infoPanel-content">
         <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
-        <p id="basicTutorial">Click on a tree for more information or use the options menu to:</p>
+        <p id="basicTutorial">Select a tree on the map for more information or use the options menu to:</p>
         <p>1) Reset the map to its default position.</p>
         <p>2) Nominate a tree by selecting a location on the map.</p>
-        <p>3) View a list of the top trees. Click on a tree to navigate to its location.</p>
-        <p>4) View the photo gallery. Click on an image to view it in fullscreen. Click on its name to see more information.</p>
+        <p>3) View a list of the top trees. Select a tree to navigate to its location.</p>
+        <p>4) View the photo gallery. Select an image to view it in fullscreen (desktop only) or select the tree name to see more information.</p>
         <div id="credits">
           <p style="text-align: center;"><strong>Credits</strong></p>
           <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
