add name/address search

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
             <li><a class="dropdown-item" onclick="buildTopTrees()">Top Trees</a></li>
             <li><a class="dropdown-item" onclick="buildPhotoGallery()">Photo Gallery</a></li>
+            <li><a class="dropdown-item" onclick="buildSearch()">Search</a></li>
           </ul>
         </div>
       </div>
@@ -75,6 +76,7 @@
         <p>2) Nominate a tree by selecting a location on the map.</p>
         <p>3) View a list of the top trees. Select a tree to navigate to its location.</p>
         <p>4) View the photo gallery. Select an image to view it in fullscreen (desktop only) or select the tree name to see more information.</p>
+        <p>4) Search for a tree by its Name or Address.</p>
         <div id="credits">
           <p style="text-align: center;"><strong>Credits</strong></p>
           <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
