--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             Options
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item" onclick="buildSearch()">Search</a></li>
             <li><a class="dropdown-item" onclick="resetMapPosition()">Reset Map</a></li>
             <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Nominate a Tree</a></li>
             <li><a class="dropdown-item" onclick="buildTopTrees()">Top Trees</a></li>
-            <li><a class="dropdown-item" onclick="buildPhotoGallery()">Photo Gallery</a></li>
-            <li><a class="dropdown-item" onclick="buildSearch()">Search</a></li>
+            <li><a class="dropdown-item" onclick="buildPhotoGallery()">Photo Gallery</a></li>            
           </ul>
         </div>
       </div>
@@ -72,11 +72,11 @@
       <div id="infoPanel-content">
         <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
         <p id="basicTutorial">Select a tree on the map for more information or use the options menu to:</p>
-        <p>1) Reset the map to its default position.</p>
-        <p>2) Nominate a tree by selecting a location on the map.</p>
-        <p>3) View a list of the top trees. Select a tree to navigate to its location.</p>
-        <p>4) View the photo gallery. Select an image to view it in fullscreen (desktop only) or select the tree name to see more information.</p>
-        <p>5) Search for a tree by its Name or Address.</p>
+        <p>1) Search for a tree by its name or address.</p>
+        <p>2) Reset the map to its default position.</p>
+        <p>3) Nominate a tree by selecting a location on the map.</p>
+        <p>4) View a list of the top trees. Select a tree to navigate to its location.</p>
+        <p>5) View the photo gallery. Select an image to view it in fullscreen (desktop only) or select the tree name for more information.</p>
         <div id="credits">
           <p style="text-align: center;"><strong>Credits</strong></p>
           <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
