adding a tree gets a new infopanel ui

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Alberta Tree Register Map</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -45,7 +45,7 @@
             <li><a class="dropdown-item" onclick="buildSearch()">Search</a></li>
             <li><a class="dropdown-item" onclick="buildTopTrees()">Top Trees</a></li>
             <li><a class="dropdown-item" onclick="buildPhotoGallery()">Photo Gallery</a></li>
-            <li><a id="nominateBtn" class="dropdown-item" onclick="activateNominating()">Add a Tree</a></li>
+            <li><a id="nominateBtn" class="dropdown-item" onclick="buildAddATree()">Add a Tree</a></li>
             <li><a class="dropdown-item" onclick="resetMapPosition()">Reset Map</a></li>
           </ul>
         </div>
@@ -81,6 +81,7 @@
           <p style="text-align: center;"><strong>Credits</strong></p>
           <p>Map Tiles provided by &copy;<a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors.</p>
           <p>Mapping Engine provided by <a href="https://openlayers.org" target="_blank">OpenLayers</a></p>
+          <p>Species descriptions provided by <a href="https://chat.openai.com/chat?model=gpt-4" target="_blank">ChatGPT-4</a></p>
           <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a>
             from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></p>
         </div>
