--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p>1) Search for a tree by its name or address.</p>
         <p>2) View a list of the top trees. Select a tree to navigate to its location.</p>
         <p>3) View the photo gallery. Select an image to view it in fullscreen (desktop only) or select the tree name for more information.</p>
-        <p>4) Add a tree by selecting a location on the map.</p>
+        <p>4) Add a tree to the register.</p>
         <p>5) Reset the map to its default position.</p>
         <div id="credits">
           <p style="text-align: center;"><strong>Credits</strong></p>
