change add to homescreen icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="Alberta-Tree-Registry-favicon-192x192.png">
 
   <script src="js/ol.js"></script>
   <link rel="stylesheet" href="css/ol.css">
