--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Alberta Tree Register Map</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
