add neighbourhood to search

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div id="infoPanel-content">
         <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
         <p id="basicTutorial">Select a tree on the map for more information or use the options menu to:</p>
-        <p>1) Search for a tree by its name or address.</p>
+        <p>1) Search for a tree by its name, address, or location.</p>
         <p>2) View a list of the top trees. Select a tree to navigate to its location.</p>
         <p>3) View the photo gallery. Select an image to view it in fullscreen (desktop only) or select the tree name for more information.</p>
         <p>4) Add a tree to the register.</p>
