change dropdown to hamburger menu icon

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="btn-group col-4 d-flex justify-content-center align-items-center">
           <button id="optionsBtn" class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Options
+            <span class="navbar-toggler-icon"></span>
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item" onclick="showSearch()">Search</a></li>
@@ -72,7 +72,7 @@
       </div>
       <div id="infoPanel-content">
         <p class="treeName"><strong>Welcome to the Alberta Tree Register Map</strong></p>
-        <p id="basicTutorial">Select a tree on the map for more information or use the options menu to:</p>
+        <p id="basicTutorial">Select a tree on the map for more information or use the menu to:</p>
         <p>1) Search for a tree by its name, address, or neighbourhood.</p>
         <p>2) View a list of the top trees. Select a tree to navigate to its location.</p>
         <p>3) View the photo gallery. Select an image to view it in fullscreen (desktop only) or select the tree name for more information.</p>
