update credits, show tree name less often

--- a/index.html
+++ b/index.html
@@ -164,19 +164,12 @@
               >
             </p>
             <p>
-              Icons made by
+              Icons provided by
               <a
-                href="https://www.flaticon.com/authors/freepik"
-                title="Freepik"
+                href="https://openai.com/product/dall-e-2"
+                title="DALL-E 2"
                 target="_blank"
-                >Freepik</a
-              >
-              from
-              <a
-                href="https://www.flaticon.com/"
-                title="Flaticon"
-                target="_blank"
-                >www.flaticon.com</a
+                >DALL-E 2</a
               >
             </p>
           </div>
