--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="Alberta Tree Register Map" />
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="img/Alberta-Tree-Registry-PNG-long.png" />
 
     <link rel="manifest" href="site.webmanifest" />
     <link
@@ -176,17 +176,6 @@
         </div>
       </div>
     </div>
-    <!-- <div
-      id="tooltip"
-      style="
-        display: none;
-        z-index: 9999;
-        background-color: #fff;
-        padding: 10px;
-        border: 1px solid #ccc;
-        font-size: 1em;
-      "
-    ></div> -->
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
